Added social links and updated styles

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -7,4 +7,4 @@ interface Props {
 const { href, body } = Astro.props;
 ---
 
-<a class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700" href={href}>{body}</a>
+<a class="p-2 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href={href}>{body}</a>
