--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,12 +44,12 @@ const sites  = [
 
 ---
 
-<footer class="bg-slate-200 dark:bg-gray-900">
+<footer class="bg-white text-sm dark:bg-neutral-800">
 <div class="mx-auto w-full p-4 py-6">
 <div class="md:flex md:justify-between">
 <div class="mb-6 md:mb-0">
 <div class="flex items-center">
-<img src="https://cdn.ttnrtsite.me/images/logo.png" class="h-8 me-3" alt="TTNRT Logo" />
+<img src="/logo.png" class="h-8 me-3" alt="TTNRT Logo" />
 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">TTNRT</span>
 </div>
 <br>
@@ -106,28 +106,28 @@ const sites  = [
 <div class="sm:flex sm:items-center sm:justify-between">
 <ThemeSw />
 <div class="flex mt-4 sm:justify-center sm:mt-0">
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+<a href="/discord" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
 <i class="fa-brands fa-discord"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/mastodon" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-mastodon"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/github" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-github"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/reddit" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-reddit"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/ttgit" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-solid fa-code-merge"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/bluesky" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-bluesky"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/facebook" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-facebook"></i>
 </a>
-<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+<a href="/odysee" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
 <i class="fa-brands fa-odysee"></i>
 </a>
 </div>
