--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Button from '../components/Button.astro';
 import Alert from '../components/Alert.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Home">
 	<main>
 	<div class="p-8 container-auto">
 	<section id="banner" class="mb-4">
@@ -29,7 +29,7 @@ import Alert from '../components/Alert.astro';
 	<p class="text-center mb-2">We love when we partner with other companys, especially when we do a contribution!</p>
 	<p class="text-center mb-2">Here is our list of who we work with!</p>
 	<div id="partnerlist">
-	<Alert details="Partners not available here. Check back later!" />
+	<Alert style="alert-blue" details="Partners not available here. Check back later!" />
 	</div>
 	<p class="text-center text-sm">Thats all we got! You reached the end of the list!</p>
 	</section>
