--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -1,15 +1,21 @@
 ---
 interface Props {
 	details: string;
+  style: string;
 }
 
-const { details } = Astro.props;
+const { details, style } = Astro.props;
 ---
 
-<div class="flex items-center p-4 mb-4 text-sm text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
-  <i class="fa-solid fa-circle-info flex-shrink-0 inline me-3"></i>
-  <span class="sr-only">Info</span>
-  <div>
-    <span class="font-medium">Notice!</span> {details}
+
+<div class={`alert ${style}`} role="alert" tabindex="-1" aria-labelledby="hs-discovery-label">
+  <div class="flex">
+    <div class="shrink-0">
+      <i class="fa-solid fa-circle-info shrink-0 size-4 mt-1"></i>
+    </div>
+    <div class="ms-3">
+      <h3 id="hs-discovery-label" class="text-gray-800 font-semibold dark:text-white">Notice!</h3>
+      <p class="mt-2 text-sm text-gray-700 dark:text-neutral-400">{details}</p>
+    </div>
   </div>
 </div>
