--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,8 +8,8 @@ interface Props {
 const { title, body, icons } = Astro.props;
 ---
 
-<div class="block p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-	<div class="border border-white p-2 bg-sky-950 text-white rounded w-10 h-10 items-center flex justify-center bg-blue-600 mb-2"><i class={icons}></i></div>
-	<h2 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{title}</h2>
-	<p class="font-normal text-gray-700 dark:text-gray-400">{body}</p>
+<div class="flex flex-col bg-white border shadow-sm rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
+<div class="border border-white p-2 text-white rounded w-10 h-10 items-center flex justify-center bg-blue-600 mb-2"><i class={icons}></i></div>
+  <h3 class="text-lg font-bold text-gray-800 dark:text-white">{title}</h3>
+  <p class="mt-2 text-gray-500 dark:text-neutral-400">{body}</p>
 </div>
