--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,33 +6,44 @@ interface Props {
 const { title } = Astro.props;
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro'
+import Alert from '../components/Alert.astro';
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="stylesheet" href="https://cdn.ttnrtsite.me/styles/fontawesome/css/all.min.css" />
-		<meta name="description" content="Astro description" />
+		<meta name="og:title" content="TTNRT Corporation">
+		<meta name="description" content="The future is now.">
+		<meta name="og:description" content="The future is now.">
+		<meta name="keywords" content="website, TTNRT, software, TTNRT Corporation, new, technology, tech">
+		<meta name="author" content="TTNRT Corporation">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo.png" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} | TTNRT</title>
+		<script is:inline>
+			// This code should be added to <head>.
+			// It's used to prevent page load glitches.
+			const html = document.querySelector('html');
+			const isLightOrAuto = localStorage.getItem('hs_theme') === 'light' || (localStorage.getItem('hs_theme') === 'auto' && !window.matchMedia('(prefers-color-scheme: dark)').matches);
+			const isDarkOrAuto = localStorage.getItem('hs_theme') === 'dark' || (localStorage.getItem('hs_theme') === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches);
+			
+			if (isLightOrAuto && html.classList.contains('dark')) html.classList.remove('dark');
+			else if (isDarkOrAuto && html.classList.contains('light')) html.classList.remove('light');
+			else if (isDarkOrAuto && !html.classList.contains('dark')) html.classList.add('dark');
+			else if (isLightOrAuto && !html.classList.contains('light')) html.classList.add('light');
+		</script>
 	</head>
-	<body class="bg-white dark:bg-black flex flex-col">
+	<body class="bg-white dark:bg-black flex flex-col text-black dark:text-white">
 		<div id="app" class="grow">
-				<div class="flex items-center p-4 text-sm text-yellow-800 bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300" role="alert">
-			<i class="fa-solid fa-triangle-exclamation me-3"></i>
-			<span class="sr-only">Info</span>
-			<div>
-			  <span class="font-medium">Warning!</span> You are viewing the developer preview of our website! Things might be buggy around here!
-			</div>
-		  </div>
+		<Alert style="alert-warn" details="You are viewing the developer preview of our website! Things might be buggy around here!" />
 		<Navbar />
 		<slot />
 		</div>
 		<Footer />
-		<script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
+		<script is:inline src="/node_modules/preline/preline.js"></script>
 	</body>
 </html>
 <style is:global>
@@ -64,38 +75,13 @@ import Footer from '../components/Footer.astro'
 		font-size: 10px;
 		font-weight: bold;
 	}
-	.dark {
-		blockquote,
-		dl,
-		dd,
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6,
-		hr,
-		figure,
-		p,
-		pre {
-			color: white;
-		}
-	}
-	.dark {
-		#home {
-			color: white;
-		}
-	}
+.alert {
+    @apply p-4;
+  }
+  .alert-blue {
+    @apply bg-blue-100 border border-blue-200 text-sm text-blue-800 dark:bg-blue-800/10 dark:border-blue-900 dark:text-blue-500;
+  }
+  .alert-warn {
+    @apply bg-yellow-100 border border-yellow-200 text-sm text-yellow-800 dark:bg-yellow-800/10 dark:border-yellow-900 dark:text-yellow-500;
+  }
 </style>
-<script>
-  		// It's best to inline this in `head` to avoid FOUC (flash of unstyled content) when changing pages or themes
-  		if (
-    	localStorage.getItem('color-theme') === 'dark' ||
-    	(!('color-theme' in localStorage) &&
-      	window.matchMedia('(prefers-color-scheme: dark)').matches)
-  		) {
-    	document.documentElement.classList.add('dark');
-  		} else {
-    	document.documentElement.classList.remove('dark');
-  		}
-</script>
