--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,63 +6,26 @@ const navmenu  = [
     }
 ];
 
-
-const servicesnav  = [
-    {
-        label: "TTGit",
-        href: "/services/git",
-    },
-    {
-        label: "TTHost",
-        href:  "/services/tthost"
-    },
-    {
-        label: "TTPages",
-        href:  "/services/ttpages"
-    },
-    {
-        label: "Assist AI",
-        href:  "/services/assistai"
-    },
-];
-
 ---
 
-<header class="relative flex flex-wrap sm:justify-start sm:flex-nowrap w-full bg-white text-sm py-3 dark:bg-neutral-800">
-  <nav class="max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between">
-<div class="flex items-center justify-between">
-  <a class="flex-none text-xl font-semibold dark:text-white focus:outline-none focus:opacity-80" href="/" aria-label="Brand">
-    <span class="inline-flex items-center gap-x-2 text-xl font-semibold dark:text-white">
-      <img class="w-10 h-auto" src="/logo.png" alt="Logo">
-      TTNRT
-    </span>
-  </a>
-  <div class="sm:hidden">
-    <button type="button" class="hs-collapse-toggle relative size-7 flex justify-center items-center gap-x-2 rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-transparent dark:border-neutral-700 dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10" id="hs-navbar-example-collapse" aria-expanded="false" aria-controls="hs-navbar-example" aria-label="Toggle navigation" data-hs-collapse="#hs-navbar-example">
-      <svg class="hs-collapse-open:hidden shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" x2="21" y1="6" y2="6"/><line x1="3" x2="21" y1="12" y2="12"/><line x1="3" x2="21" y1="18" y2="18"/></svg>
-      <svg class="hs-collapse-open:block hidden shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-      <span class="sr-only">Toggle navigation</span>
-    </button>
-  </div>
+<header>
+<nav class="relative flex bg-gray-300 dark:bg-zinc-900 p-3">
+<div id="brand" class="grid gap-5 content-center">
+<a href="/" class="nav-brand"><img src="/logo.png" width="32" height="32"> TTNRT</a>
 </div>
-<div id="hs-navbar-example" class="hidden hs-collapse overflow-hidden transition-all duration-300 basis-full grow sm:block" aria-labelledby="hs-navbar-example-collapse">
-  <div class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:ps-5">
-    {navmenu.map((item, index) => (
-    <a class="font-medium text-gray-600 hover:text-gray-400 focus:outline-none focus:text-gray-400 dark:text-neutral-400 dark:hover:text-neutral-500 dark:focus:text-neutral-500" href={item.href}>{item.label}</a>
-    ))}
-    <div class="hs-dropdown [--strategy:static] sm:[--strategy:fixed] [--adaptive:none] ">
-      <button id="hs-navbar-example-dropdown" type="button" class="hs-dropdown-toggle flex items-center w-full text-gray-600 hover:text-gray-400 focus:outline-none focus:text-gray-400 font-medium dark:text-neutral-400 dark:hover:text-neutral-500 dark:focus:text-neutral-500" aria-haspopup="menu" aria-expanded="false" aria-label="Mega Menu">
-        Services
-        <svg class="hs-dropdown-open:-rotate-180 sm:hs-dropdown-open:rotate-0 duration-300 ms-1 shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 9 6 6 6-6"/></svg>
-      </button>
-
-      <div class="hs-dropdown-menu transition-[opacity,margin] ease-in-out duration-[150ms] hs-dropdown-open:opacity-100 opacity-0 sm:w-48 z-10 bg-white sm:shadow-md rounded-lg p-1 space-y-1 dark:bg-neutral-800 sm:dark:border dark:border-neutral-700 dark:divide-neutral-700 before:absolute top-full sm:border before:-top-5 before:start-0 before:w-full before:h-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="hs-navbar-example-dropdown">
-        {servicesnav.map((item, index) => (
-        <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300" href={item.href}>{item.label}</a>
-        ))}
-      </div>
-    </div>
-  </div>
+<div id="items" class="inline-flex items-center ml-3 gap-3">
+{navmenu.map((item, index) => (
+  <a class="nav-link" href={item.href}>{item.label}</a>
+))}
+<div class="group relative">
+<span class="nav-link">Pages</span>
+<div class="hidden group-hover:block fixed bg-white border rounded p-4 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
+<ul>
+<li><a class="nav-link" href="/terms">Terms of use</a></li>
+<li><a class="nav-link" href="/privacy">Privacy policy</a></li>
+</ul>
+</div>
+</div>
 </div>
 </nav>
 </header>
