--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -8,14 +8,9 @@ const { details, style } = Astro.props;
 ---
 
 
-<div class={`alert ${style}`} role="alert" tabindex="-1" aria-labelledby="hs-discovery-label">
-  <div class="flex">
-    <div class="shrink-0">
-      <i class="fa-solid fa-circle-info shrink-0 size-4 mt-1"></i>
-    </div>
-    <div class="ms-3">
-      <h3 id="hs-discovery-label" class="text-gray-800 font-semibold dark:text-white">Notice!</h3>
-      <p class="mt-2 text-sm text-gray-700 dark:text-neutral-400">{details}</p>
-    </div>
-  </div>
+<div class={`alert ${style}`} role="alert">
+<div class="">
+<h3 id="hs-discovery-label" class="text-gray-800 font-semibold dark:text-white">Notice!</h3>
+<p class="mt-2 text-sm text-gray-700 dark:text-neutral-400">{details}</p>
+</div>
 </div>
