--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,8 +8,7 @@ interface Props {
 const { title, body, icons } = Astro.props;
 ---
 
-<div class="flex flex-col bg-white border shadow-sm rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-<div class="border border-white p-2 text-white rounded w-10 h-10 items-center flex justify-center bg-blue-600 mb-2"><i class={icons}></i></div>
-  <h3 class="text-lg font-bold text-gray-800 dark:text-white">{title}</h3>
-  <p class="mt-2 text-gray-500 dark:text-neutral-400">{body}</p>
+<div class="flex flex-col bg-slate-300 border rounded p-4 dark:bg-slate-800 ">
+  <h3 class="mb-2"><i class={icons}></i> {title}</h3>
+  <p>{body}</p>
 </div>
