--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,7 +11,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title}>
-  <article id="main" class="p-8 container">
+  <article id="main" class="p-3">
    <slot />
   </article>
 </Layout>
